# code-snippets

./: .gitignore  README.md
c++/Extract_keypoint/: CMakeLists.txt  README.md  main.cpp
c++/Timing/: README.md
c++/dount/: dount  dount.c
cuda/slic_cuda/: Readme.md  init.cpp  setup.py  slic_utlis.cu  test.py
cuda/slic_cuda/include/: slic_utils.cuh  utils.h
python/detect_blur/: detect_blur.py
python/get_gpu_info/: get_mem.py
python/knn/: frnn_example.py
python/superpixel/: fast_slic_example.py  slic_sample.py  slic_sample_level.py  slic_skimage.py
scripts/: requirement.sh  requirement_deepin.sh
